--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="col-md-12">
-            <img src="Header.PNG" alt="" width="100%">
+            <img src="../Header.PNG" alt="" width="100%">
         </div>
         <nav class="navbar navbar-expand-md justify-content">
             <ul class="navbar">
